# klotzandrew.github.io

./: .prettierignore  .prettierrc  CNAME  Gemfile  Makefile  README.md  _config.yml  gatsby-browser.js  gatsby-config.js  gatsby-node.js  index.html  package-lock.json  package.json  start
.github/: dependabot.yml
_drafts/: environment-variables-elixir-deploy.markdown  idempotency-patterns.markdown  posgres-pivot-tables.markdown
_includes/: disqus.html  footer.html  head.html  header.html
_layouts/: post.html
_posts/: 2016-05-23-interactor-pattern-keep-your-rails-app-skinny.markdown  2016-05-23-welcome-to-jekyll.markdown  2017-12-10-dropped-messages-outbox-pattern.markdown  2017-12-24-leaderboard-using-redis.markdown  2018-01-01-neo4j-bulk-import.markdown  2018-01-03-graph-queries-with-cypher.markdown  2018-09-12-container-from-scratch.markdown  2018-10-28-golang-finding-memory-leaks.markdown  2019-01-28-gke-helm.markdown  2019-02-25-effective-coaching.markdown  2019-03-23-4-types-of-work.markdown  2019-03-27-what-makes-a-great-engineering-manager.markdown  2019-04-17-project-aristotle.markdown  2019-04-28-authorization-with-open-policy-agent.markdown  2019-06-30-imagine-better-flaky-tests.markdown  2019-08-16-authorization-with-casbin.markdown  2019-10-17-insert-speed-postgres-indexes.markdown  2019-10-22-osx-screenshot-blur-as-lockscreen.markdown  2019-11-17-rust-wasm-tetris.markdown  2019-12-07-tlaplus-money-transfer.markdown  2020-02-15-docker-dynamic-environment-variables.md
content/blog/2023/hello-world-bazel-go/: BUILD.bazel  WORKSPACE  go.mod  main.go
(+138 files in other folders)
